Improved accuracy, need to improve feedback (be specific)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">MovenetAndroid</string>
+    <string name="analyzing_squat_depth">Analyzing squat depth</string>
 </resources>
