--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">MovenetAndroid</string>
+    <string name="app_name">Anytime Workout</string>
     <string name="analyzing_squat_depth">Analyzing squat depth</string>
     <string name="reset_counter">Reset Counter</string>
 </resources>
